tests/baselines/reference/propertyAssignment.errors.txt
tests/cases/compiler/propertyAssignment.ts(6,13): error TS1169: Computed property names are not allowed in interfaces or type literals.
tests/cases/compiler/propertyAssignment.ts(14,1): error TS2322: Type '{ x: number; }' is not assignable to type 'new () => any'.
tests/cases/compiler/propertyAssignment.ts(16,1): error TS2322: Type '{ x: number; }' is not assignable to type '() => void'.


==== tests/cases/compiler/propertyAssignment.ts (3 errors) ====
    
    
    var foo1: { new ():any; }   
    var bar1: { x : number; }
    
    var foo2: { [index]; } // should be an error
                ~~~~~~~
!!! error TS1169: Computed property names are not allowed in interfaces or type literals.
    var bar2: { x : number; }
    
    var foo3: { ():void; }
    var bar3: { x : number; }
    
    
    
    foo1 = bar1; // should be an error
    ~~~~
!!! error TS2322: Type '{ x: number; }' is not assignable to type 'new () => any'.
    foo2 = bar2; 
    foo3 = bar3; // should be an error
    ~~~~
!!! error TS2322: Type '{ x: number; }' is not assignable to type '() => void'.